# asl-anki-generator

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  dprint.json  hk.pkl  mise.toml  pyproject.toml  quick_run.py  txt_to_config.py  words.json  words.sample.json  words.schema.json
.zed/: settings.json
aslankigen/: __init__.py  __main__.py  generate.py  models.py  schema.py  test_util.py  tests.py  util.py
server/: __init__.py  server.py
tests/: test_generate.py  test_models.py  test_schema.py  test_util.py
