[project]
name = "asl-anki-generator"
version = "0.1.0"
description = "Generate Anki flashcard decks for ASL vocabulary"
requires-python = ">=3.13"
dependencies = [
  "genanki",
  "pydantic",
  "requests",
  "rich>=14.3.3",
]

[project.scripts]
asl-anki-generator = "aslankigen.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aslankigen"]

[dependency-groups]
dev = [
  "pytest",
]
